# opendata_zh_erkunden

./: README.md
poi/: GangDurZueri.ipynb  HaikuImPark.ipynb
src/: pyproject.toml
src/opendata_zh/: __init__.py
velo/: Velo-Wege.ipynb
verkehr/: Verkehr.ipynb
