[project]
name = "opendata_zh"
version = "0.1.0"
description = "Hilfsmodel für OpenDataZH"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/ciyer/opendata_zh_erkunden"

[tool.setuptools]
packages = ["opendata_zh"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
